--- a/EventManagerApp/EventManager.Web.csproj
+++ b/EventManagerApp/EventManager.Web.csproj
@@ -207,6 +207,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\EventCampaignController.cs" />
     <Compile Include="Controllers\EventRegisterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -217,6 +218,7 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CityModel.cs" />
     <Compile Include="Models\EventRegisterModel.cs" />
     <Compile Include="Models\EventCampaignModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
