--- a/EventManager.ApiModels/EventManager.ApiModels.csproj
+++ b/EventManager.ApiModels/EventManager.ApiModels.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiEventCampaignModel.cs" />
+    <Compile Include="ApiEventRegisterModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
