--- a/EventManager.BusinessService/EventManager.BusinessService.csproj
+++ b/EventManager.BusinessService/EventManager.BusinessService.csproj
@@ -54,6 +54,7 @@
     <Compile Include="EventRegisterBusinessService.cs" />
     <Compile Include="NotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventManager.ApiModels\EventManager.ApiModels.csproj">
