--- a/EventManager.BusinessService/EventManager.BusinessService.csproj
+++ b/EventManager.BusinessService/EventManager.BusinessService.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,7 +51,6 @@
   <ItemGroup>
     <Compile Include="AccountBusinessService.cs" />
     <Compile Include="CityBusinessService.cs" />
-    <Compile Include="EventBusinessService.cs" />
     <Compile Include="EventCampaignBusinessService.cs" />
     <Compile Include="EventRegisterBusinessService.cs" />
     <Compile Include="NotificationService.cs" />
