--- a/EventManagerApp/EventManager.Web.csproj
+++ b/EventManagerApp/EventManager.Web.csproj
@@ -216,15 +216,19 @@
     <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\EventCampaignController.cs" />
     <Compile Include="Controllers\EventRegisterController.cs" />
+    <Compile Include="Controllers\FileOperationFilter.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Filters\HttpActionContext.cs" />
     <Compile Include="Filters\RequireHttpsAttribute.cs" />
+    <Compile Include="Filters\ValidateMimeMultipartContentFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CityModel.cs" />
+    <Compile Include="Models\Class1.cs" />
     <Compile Include="Models\EventRegisterModel.cs" />
     <Compile Include="Models\EventCampaignModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
