--- a/EventManagerApp/EventManager.Web.csproj
+++ b/EventManagerApp/EventManager.Web.csproj
@@ -244,6 +244,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\home-app-site_01.png" />
+    <Content Include="Content\img\home-app-site_02.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -252,8 +254,20 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Images\1676315267156069119.jpg" />
+    <Content Include="Images\1776734431theuxe.jpg" />
+    <Content Include="Images\2060453765register.PNG" />
+    <Content Include="Images\263954458p1.png" />
+    <Content Include="Images\37824774167cs23.jpg" />
+    <Content Include="Images\427980758acb.jpg" />
+    <Content Include="Images\469759628p1.png" />
+    <Content Include="Images\499151426mdb.jpg" />
+    <Content Include="Images\543086874register.PNG" />
+    <Content Include="Images\home-app-site_01.png" />
+    <Content Include="Images\home-app-site_02.png" />
     <Content Include="Metadata\deploymentTemplates\apiappconfig.azureresource.json" />
     <Content Include="apiapp.json" />
+    <Content Include="Content\img\Cam ket tham du chuong trinh Tiger Wall ver 2.pdf" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\bootstrap.js" />
